--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 /* styles.css */
 
+
 table {
   border-collapse: collapse;
   width: 100%;
@@ -40,3 +41,44 @@ footer {
   text-align: center;
   color: #555;
 }
+
+/* FLEXBOX LAYOUT */
+
+body {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  margin: 0;
+}
+
+main {
+  display: flex;
+  flex-direction: row;
+  flex: auto;
+}
+
+article {
+  flex: 2;
+  overflow-y: auto;
+  padding: 1em;
+}
+
+aside {
+  flex: 1;
+  overflow-y: auto;
+  padding: 1em;
+}
+
+header {
+  background-color: #333;
+  color: white;
+  padding: 1em;
+}
+
+footer {
+  padding: 1em;
+  background-color: #f9f9f9;
+  color: #555;
+  text-align: center;
+}
+
